@@ -18,6 +18,7 @@
 package io.github.moremcmeta.animationplugin.metadata;
 
 import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableSet;
 import com.mojang.datafixers.util.Pair;
 import io.github.moremcmeta.animationplugin.MockCurrentFrameView;
 import io.github.moremcmeta.animationplugin.MockMutableFrameGroup;
@@ -58,13 +59,13 @@ public final class AnimationComponentBuilderTest {
             new MockMutableFrameView(Pair.of(Color.pack(20, 20, 20, 20), Area.of(Point.pack(0, 1), Point.pack(0, 0)))),
             new MockMutableFrameView(Pair.of(Color.pack(30, 30, 30, 30), Area.of(Point.pack(0, 1), Point.pack(9, 19))))
     );
-    private static final List<Pair<Integer, Integer>> LARGE_MOCK_FRAME_LIST = List.of(
+    private static final List<Pair<Integer, Integer>> LARGE_MOCK_FRAME_LIST = ImmutableList.of(
             Pair.of(0, 1),
             Pair.of(2, 5),
             Pair.of(1, 27),
             Pair.of(2, 3)
     );
-    private static final List<Pair<Integer, Integer>> SMALL_MOCK_FRAME_LIST = List.of(
+    private static final List<Pair<Integer, Integer>> SMALL_MOCK_FRAME_LIST = ImmutableList.of(
             Pair.of(2, 5),
             Pair.of(0, 1)
     );
@@ -269,7 +270,7 @@ public final class AnimationComponentBuilderTest {
     public void build_DiffPartsChangedInEachFrame_InterpolateAreaCombined() {
         checkChangedPoints(
                 MOCK_FRAME_GROUP.get(),
-                Set.of(Point.pack(0, 1), Point.pack(1, 1), Point.pack(0, 0), Point.pack(9, 19))
+                ImmutableSet.of(Point.pack(0, 1), Point.pack(1, 1), Point.pack(0, 0), Point.pack(9, 19))
         );
     }
 
@@ -281,7 +282,7 @@ public final class AnimationComponentBuilderTest {
                         new MockMutableFrameView(Pair.of(Color.pack(20, 20, 20, 0), Area.of(Point.pack(0, 1), Point.pack(0, 0)))),
                         new MockMutableFrameView(Pair.of(Color.pack(10, 10, 10, 30), Area.of(Point.pack(0, 1), Point.pack(9, 19))))
                 ),
-                Set.of(Point.pack(0, 1), Point.pack(9, 19))
+                ImmutableSet.of(Point.pack(0, 1), Point.pack(9, 19))
         );
     }
 
@@ -293,7 +294,7 @@ public final class AnimationComponentBuilderTest {
                         new MockMutableFrameView(Color.pack(10, 10, 10, 10)),
                         new MockMutableFrameView(Color.pack(10, 10, 10, 10))
                 ),
-                Set.of()
+                ImmutableSet.of()
         );
     }
 
@@ -302,7 +303,7 @@ public final class AnimationComponentBuilderTest {
         expectedException.expect(IllegalArgumentException.class);
         checkChangedPoints(
                 new MockMutableFrameGroup(),
-                Set.of()
+                ImmutableSet.of()
         );
     }
 
@@ -609,7 +610,7 @@ public final class AnimationComponentBuilderTest {
         MockCurrentFrameView currentFrameView = new MockCurrentFrameView();
 
         Set<Long> changedPoints = new HashSet<>();
-        Set<Integer> nonInterpolatedColors = Set.of(
+        Set<Integer> nonInterpolatedColors = ImmutableSet.of(
                 Color.pack(0, 0, 0, 0),
                 Color.pack(10, 10, 10, 10),
                 Color.pack(20, 20, 20, 20),
